# datacomp

./: .gitignore  baselines.py  clustering.sh  download.sh  env.yml  env_builds.yml  filter.sh  fix_env.sh  pyproject.toml  reshard.sh  train.py  train1.sh  train2.sh  train3.sh  train4.sh  train_curation.py  train_curationray.py  train_pcam_inverse.py  train_raw.sh  train_upsampling.py
baselines/: apply_filter.py  image_based_clustering.py
conf/: amd.yaml  config.yaml  dr.yaml  fitzpatrick.yaml  glaucoma.yaml  pcam.yaml  resolvers.py  upsample_base.yaml
conf_curation/: amd.yaml  cifar100.yaml  config.yaml  dr.yaml  fitzpatrick.yaml  food101.yaml  full.yaml  glaucoma.yaml  pcam.yaml  ray.yaml  resolvers.py  stl10.yaml  sweep.yaml
datacomp_experiments/: eval_lib.py  experiment_lib.py  filter_lib.py  main.py  train_lib.py
datacomp_experiments/conf/: config.yaml
training/training/: data.py  main.py  params.py  pdpl.py
